fix border radius on ios

--- a/src/components/DemoVideo/style.scss
+++ b/src/components/DemoVideo/style.scss
@@ -12,6 +12,8 @@
     width: 100%;
     height: 0;
     padding-bottom: 80%;
+    border-radius: 9px;
+    overflow: hidden;
   }
 
   &__video {
@@ -21,5 +23,7 @@
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: 9px;
+    overflow: hidden;
   }
 }
